--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 Aplicacion usando el API de google maps
+
+Una vez credo el modelo procedemos a crear la base de datos a partir del modelo creado :
+$ python manage.py syncdb
